# memory-engine-diagnostics

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
docs/: ALLOCATORS.md  API.md  ARCHITECTURE.md  BENCHMARKS.md
src/: main.cpp
src/bindings/: wasm_bindings.cpp
src/core/: engine.hpp
src/core/allocators/: base_allocator.hpp  freelist_allocator.hpp  pool_allocator.hpp  stack_allocator.hpp  standard_allocator.hpp
src/core/benchmarks/: benchmark_runner.hpp  concurrency_benchmark.hpp
src/core/utils/: memory_utils.hpp  statistics.hpp  timer.hpp
web/: index.html
web/css/: styles.css
web/js/: app.js  controls.js  metrics.js  visualizer.js
web/wasm/: .gitkeep
